internal/xds/translator/testdata/out/xds-ir/authorization-client-cert.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    name: envoy-gateway/gateway-1/http/www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.rbac:
          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
          rbac:
            matcher:
              matcherList:
                matchers:
                - onMatch:
                    action:
                      name: allow-spiffe-uri-san
                      typedConfig:
                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                        name: ALLOW
                  predicate:
                    orMatcher:
                      predicate:
                      - singlePredicate:
                          input:
                            name: client_cert_uri_san
                            typedConfig:
                              '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
                          valueMatch:
                            exact: spiffe://trust-domain/ns/client-ns/sa/client-sa
                      - singlePredicate:
                          input:
                            name: client_cert_uri_san
                            typedConfig:
                              '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
                          valueMatch:
                            exact: spiffe://trust-domain/ns/other-ns/sa/other-sa
              onNoMatch:
                action:
                  name: default
                  typedConfig:
                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                    action: DENY
                    name: DENY
    - match:
        pathSeparatedPrefix: /bar
      name: httproute/default/httproute-2/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.rbac:
          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
          rbac:
            matcher:
              matcherList:
                matchers:
                - onMatch:
                    action:
                      name: deny-spiffe-uri-san
                      typedConfig:
                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                        action: DENY
                        name: DENY
                  predicate:
                    orMatcher:
                      predicate:
                      - singlePredicate:
                          input:
                            name: client_cert_uri_san
                            typedConfig:
                              '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
                          valueMatch:
                            exact: spiffe://trust-domain/ns/client-ns/sa/client-sa
                      - singlePredicate:
                          input:
                            name: client_cert_uri_san
                            typedConfig:
                              '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
                          valueMatch:
                            exact: spiffe://trust-domain/ns/other-ns/sa/other-sa
              onNoMatch:
                action:
                  name: default
                  typedConfig:
                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                    action: DENY
                    name: DENY
    - match:
        pathSeparatedPrefix: /baz
      name: httproute/default/httproute-3/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-3/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.rbac:
          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
          rbac:
            matcher:
              matcherList:
                matchers:
                - onMatch:
                    action:
                      name: allow-single-uri-san
                      typedConfig:
                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                        name: ALLOW
                  predicate:
                    singlePredicate:
                      input:
                        name: client_cert_uri_san
                        typedConfig:
                          '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
                      valueMatch:
                        exact: spiffe://envoy-gateway/ns/default/sa/client
              onNoMatch:
                action:
                  name: default
                  typedConfig:
                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                    action: DENY
                    name: DENY
